# Entropy

./: .gitignore  .gitmodules  Anchor.toml  Cargo.toml  Makefile  README.md  cargo.toml  docker-compose.yml
.github/workflows/: ci.yml
lending-client/: Cargo.toml
programs/margin-account/: Cargo.toml
programs/margin-account/src/: lib.rs
programs/token-lending/src/: instruction.rs
scripts/: bootstrap_dex.sh
spec/: dex.md  flow.md  governance.md  inflation_fees.md  insurance.md  introduction.md  lending.md  liquidation.md  margin.md  staking.md
tests/: margin.js
token-lending/: README.md
token-lending/client/: Cargo.toml
token-lending/program/: Cargo.toml
token-lending/program/src/: error.rs  helper.rs  instruction.rs  lib.rs  margin.rs  notes.md  processor.rs
token-lending/program/src/state/: obligation.rs  reserve.rs
token-lending/program/tests/: genesis_accounts.rs  margin_borrow.rs
token-lending/program/tests/helpers/: mod.rs
