[package]
name = "spl-token-lending-client"
version = "0.1.0"
description = "Solana Program Library Token Lending Client"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/marbar3778/entropy"
license = "Apache-2.0"
edition = "2018"

[dependencies]
solana-client = "1.5.0"
solana-program = "1.5.0"
solana-sdk = "1.5.0"
spl-token-lending = { path = "../programs/token-lending", features = [ "no-entrypoint" ] }
spl-token = {  version = "3.0.1", features = [ "no-entrypoint" ] }
