[package]
name = "margin-account"
version = "0.1.0"
description = "Margin account logic for handling leveraged loans"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "margin_account"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { git = "https://github.com/project-serum/anchor", features = [
    "derive"
] }
anchor-spl = { git = "https://github.com/project-serum/anchor" }
spl-token-lending = { path = "../../token-lending/program", features = ["no-entrypoint"] }
solana-program = "1.5.0"
