[package]
name = "margin-account"
version = "0.1.0"
description = "Margin account logic for handling leveraged loans"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "margin_account"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { git = "https://github.com/project-serum/anchor", features = [
    "derive"
] }
anchor-spl = { git = "https://github.com/project-serum/anchor" }
spl-token-lending = { path = "../token-lending", features = ["no-entrypoint"] }
spl-token-swap = { git = "https://github.com/austinabell/solana-program-library", rev = "153a8e718bf9115594f956f6fd4f498ec0b4cf37", features = ["no-entrypoint"] }
solana-program = "1.5.0"
